--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "wp-content/themes/jeancatanho"]
 	path = wp-content/themes/jeancatanho
 	url = https://github.com/jensmcatanho/publisher-theme.git
+[submodule "wp-content/plugins/memuller"]
+	path = wp-content/plugins/memuller
+	url = https://gitlab.com/memuller.web/wp_plugin.git
